<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentButtonPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Group
        android:id="@+id/viewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="enterData,getData" />

    <android.support.constraint.Group
        android:id="@+id/viewGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="enterData,getData" />



    <Button
        android:id="@+id/enterData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterData"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.25"/>

    <Button
        android:id="@+id/getData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getData"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterData"
        app:layout_constraintBottom_toBottomOf="@id/searchData"
        app:layout_constraintVertical_bias="0.25"/>

    <Button
        android:id="@+id/searchData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchData"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/getData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.25"
        />

    `
</android.support.constraint.ConstraintLayout>
